--- a/CSS/selector.html
+++ b/CSS/selector.html
@@ -9,7 +9,8 @@
     }
     /* условие 1: не править HTML, править только стили. */
     /* Задание 1: разукрасить элементы списка (color) в соответствии с текстом */
-    /* Задание 2: написать максимально специфичный селектор для li (без использования :not) и сделать тест жирным */
+    /* Задание 2: написать *отдельный* максимально специфичный селектор только для *последнего* li (без использования :not)
+         и сделать тест жирным */
   </style>
 </head>
 <body id="body">
