Correct tech.spec

--- a/CSS/selector.html
+++ b/CSS/selector.html
@@ -7,10 +7,12 @@
     * {
         box-sizing: border-box;
     }
-    /* условие 1: не править HTML, править только стили. */
+    /* Тест на понимание фундаментальных основ вёрстки */
+    /* условие 1: не править HTML, не править JS, править только содержимое <style>. */
     /* Задание 1: разукрасить элементы списка (color) в соответствии с текстом */
-    /* Задание 2: написать *отдельный* максимально специфичный селектор только для *последнего* li (без использования :not)
-         и сделать тест жирным */
+    /* Задание 2: написать *отдельный* максимально *специфичный* селектор
+                  только для *последнего* li (без использования :not)
+                  и сделать тест жирным */
   </style>
 </head>
 <body id="body">
